<resources>
    <string name="app_name">iSKY</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_attendees">Attendees</string>
    <string name="title_graph">Graph</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="attendees_information">INFORMATION</string>
    <string name="name">NAME</string>
    <string name="address">ADDRESS</string>
    <string name="barangay">BARANGAY</string>
    <string name="presinto">PRESINTO</string>
    <string name="back">BACK</string>
    <string name="solicitaion">SOLICITATION</string>
    <string name="attendees_list">Attendees List</string>
    <string name="barangay_graph">Barangay Graph</string>
    <string name="enter_target_count">Enter Target Count</string>
    <string name="generate_graph">Generate Graph</string>
    <string name="generate_missing_entry">Generate Missing Entry</string>
    <string-array name="city_municipality">
        <item>Naga City</item>
    </string-array>
</resources>
