<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_scanner"
        android:title="@string/title_scanner" />

    <item
        android:id="@+id/navigation_attendees"
        android:icon="@drawable/ic_list"
        android:title="@string/title_attendees" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/ic_graph"
        android:title="@string/title_graph" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>
