<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474F"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person_white_24dp"
        android:padding="10dp"
        android:text="@string/attendees_information"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_tv" />


    <Button
        android:id="@+id/back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37474f"
        android:text="@string/back"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/qr_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="#263238"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textColor="#263238"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_address_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_barangay_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/barangay"
                android:textColor="#263238"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_barangay_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_precinct_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/presinto"
                android:textColor="#263238"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_precinct_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_vin_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="VIN"
                android:textAllCaps="true"
                android:textColor="#263238"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_vin_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_activity_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="ACTIVITIES"
                android:textColor="#263238"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_activity_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_timestamp_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/solicitaion"
                android:textColor="#263238"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qr_solicitaion_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>